[fix] BuyHouseTransaction
